--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4758,8 +4758,14 @@ input, select, textarea {
     }
 }
 
-
 iframe {
 	width: 60%;
-	height: 600px;
+	height: 600px
+}
+
+@media screen and (max-width: 768px) {
+	iframe {
+		width: 100%;
+		height: 400px
+	}
 }
